--- a/scripts/style.css
+++ b/scripts/style.css
@@ -105,6 +105,7 @@ p, a, div {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 #header-title {
